# amqpwn

./: .gitignore  LICENSE  Makefile  Setup.lhs  amqp.cabal  amqpwn.cabal
Codegen/: Codegen.hs
Network/: AMQP.hs  AMQP.hs.deprecated  Messaging.hs
Network/AMQP/: Assembly.hs  Channel.hs  Channel.hs.deprecated  Connection.hs  Framing.hs  FramingTypes.hs  Framming.hs  FrammingTypes.hs  Helpers.hs  Protocol.hs  Publisher.hs  Types.hs
Network/AMQP/Internal/: Types.hs
Network/AMQP/Types/: Internal.hs
Network/Messaging/: Helpers.hs  Publisher.hs
Network/Messaging/AMQP/: Connection.hs  Framing.hs  FramingTypes.hs  Protocol.hs  Types.hs
Network/Messaging/AMQP/Types/: Internal.hs
Test/: Simple.hs
Tools/: Builder.hs  Generated.hs.in
