Name:                amqp
Version:             0.3.0
Synopsis:            Client library for AMQP servers (currently only RabbitMQ)
Description:         Client library for AMQP servers (currently only RabbitMQ)
License:             BSD3
Stability:           alpha
License-file:        LICENSE
Author:              Holger Reinhardt
Category:            Network
Maintainer:          Holger Reinhardt <hreinhardt@gmail.com>
Build-Type:          Simple
Homepage:            https://github.com/hreinhardt/amqp
Cabal-Version:       >=1.2
Extra-source-files:  examples/ExampleConsumer.hs,
                     examples/ExampleProducer.hs

Library
  Build-Depends:      base >= 4, binary, containers, bytestring, network,
                      template-haskell
  ghc-options:        -O2 -Wall -fno-warn-unused-do-bind -fno-warn-incomplete-patterns
  Exposed-modules:    Network.AMQP, Network.AMQP.Types
  Other-modules:      Network.AMQP.Framing, Network.AMQP.Helpers, Network.AMQP.Protocol

