Name:                amqp
Version:             0.3.0
Synopsis:            Client library for AMQP servers (currently only RabbitMQ)
Description:         Client library for AMQP servers (currently only RabbitMQ)
License:             BSD3
Stability:           alpha
License-file:        LICENSE
Author:              Holger Reinhardt, Alexandru Scvortov
Category:            Network
Maintainer:          Alexandru Scvortov <scvalex@gmail.com>
Build-Type:          Simple
Homepage:            https://github.com/scvalex/amqp
Cabal-Version:       >=1.6

Extra-source-files:  examples/ExampleConsumer.hs,
                     examples/ExampleProducer.hs,
                     Codegen/Codegen.hs,
                     Test/Simple.hs

Data-files:          Codegen/amqp0-9-1.xml,
                     Makefile,
                     README.md

Source-repository    head
  Type:              git
  Location:          git://github.com/scvalex/amqp.git


Library
  Build-Depends:      base >= 4, binary, containers, bytestring, network,
                      template-haskell
  Ghc-options:        -Wall -fno-warn-unused-do-bind -fno-warn-incomplete-patterns
  Exposed-modules:    Network.AMQP, Network.AMQP.Types,
                      Network.AMQP.Connection, Network.AMQP.Channel
  Other-modules:      Network.AMQP.Framing, Network.AMQP.Helpers,
                      Network.AMQP.Protocol, Network.AMQP.FramingTypes

