Name:                amqpwn
Version:             0.3.0
Synopsis:            Client library for AMQP servers (currently only RabbitMQ)
Description:         Client library for AMQP servers (currently only RabbitMQ)
License:             BSD3
Stability:           alpha
License-file:        LICENSE
Author:              Holger Reinhardt, Alexandru Scvortov
Category:            Network
Maintainer:          Alexandru Scvortov <scvalex@gmail.com>
Build-Type:          Custom
Homepage:            https://github.com/scvalex/amqpwn
Cabal-Version:       >=1.6

Extra-source-files:  examples/ExampleConsumer.hs,
                     examples/ExampleProducer.hs,
                     Codegen/Codegen.hs,
                     Test/Simple.hs

Data-files:          Codegen/amqp0-9-1.xml,
                     Makefile,
                     README.md

Source-repository    head
  Type:              git
  Location:          git://github.com/scvalex/amqpwn.git


Library
  Build-Depends:      base >= 4, binary, containers, bytestring, network,
                      template-haskell, stm, mtl, transformers
  Ghc-options:        -Wall -fno-warn-unused-do-bind -fno-warn-incomplete-patterns
  Exposed-modules:    Network.Messaging
  Other-modules:      Network.Messaging.AMQP.Framing,
                      Network.Messaging.AMQP.FramingTypes,
                      Network.Messaging.AMQP.Connection,
                      Network.Messaging.AMQP.Types,
                      Network.Messaging.AMQP.Types.Internal,
                      Network.Messaging.AMQP.Framing,
                      Network.Messaging.Helpers,
                      Network.Messaging.Publisher
